# final_challenge2025

./: dilated_occupancy_grid.npy  line_detector.py  package.xml  setup.py  testing.ipynb
config/: stop_param.yaml
final_challenge2025/: a_star_final.py  color_segmentation.py  eval.py  heist_stopping.py  homography_transformer.py  parking_controller.py  stoplight_detector.py  test_red_light_detector.py  trajectory_follower.py  trajectory_planner.py  visualize_grid.py
final_challenge2025/final_challenge2025/: heist_stopping.py  homography_transformer.py  parking_controller.py  stoplight_detector.py  trajectory_planner.py
final_challenge2025/final_challenge2025/launch/: heist_navigation.launch.xml  heist_stopping.launch.xml
final_challenge2025/model/: color_segmentation.py  detection_node.py  detector.py  traffic_light_detection.py
launch/: heist_navigation.launch.xml  heist_sim_navigation.launch.xml  heist_stopping.launch.xml
occupancy_grid_viz/: dilated_occupancy_grid.npy
shrinkray_heist/model/: detection_node.py
