<package format="3">
<name>final_challenge2025</name>
<version>0.0.0</version>
<description>Final Challenge 2025 ROS 2 package with computer vision and path planning nodes.</description>
<maintainer email="fionaw5th@gmail.com">racecar</maintainer>
<license>MIT</license>
<buildtool_depend>ament_cmake</buildtool_depend>
<buildtool_depend>ament_python</buildtool_depend>
<exec_depend>rclpy</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>ackermann_msgs</exec_depend>
<exec_depend>cv_bridge</exec_depend>
<exec_depend>visualization_msgs</exec_depend>
<exec_depend>numpy</exec_depend>
<exec_depend>opencv</exec_depend>
<test_depend>ament_copyright</test_depend>
<test_depend>ament_flake8</test_depend>
<test_depend>ament_pep257</test_depend>
<test_depend>python3-pytest</test_depend>
<export>
<build_type>ament_python</build_type>
</export>
</package>